// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ButtonStatus Long text 1`] = `
<ButtonStatus
  onSelect={[Function]}
  selected={false}
  text="Very long content"
>
  <WithStyles(ButtonStatusComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onSelect={[Function]}
    selected={false}
    text="Very long content"
    theme={Object {}}
  >
    <ButtonStatusComp
      classes={
        Object {
          "button": "ButtonStatusComp-button-0-3-63",
          "content": "ButtonStatusComp-content-0-3-60",
          "contentWithIcon": "ButtonStatusComp-contentWithIcon-0-3-61",
          "contour": "ButtonStatusComp-contour-0-3-59",
          "icon": "ButtonStatusComp-icon-0-3-62",
          "normal": "ButtonStatusComp-normal-0-3-57",
          "root": "ButtonStatusComp-root-0-3-56",
          "selected": "ButtonStatusComp-selected-0-3-58",
        }
      }
      onSelect={[Function]}
      selected={false}
      text="Very long content"
    >
      <div
        className="ButtonStatusComp-root-0-3-56"
      >
        <TouchRipple
          className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
          disabled={false}
          onClick={[Function]}
        >
          <WithStyles(TouchRippleComp)
            className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
            disabled={false}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            onClick={[Function]}
            theme={Object {}}
          >
            <TouchRippleComp
              className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
              classes={
                Object {
                  "disabled": "TouchRippleComp-disabled-0-3-34",
                  "root": "TouchRippleComp-root-0-3-33",
                }
              }
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57 TouchRippleComp-root-0-3-33"
                onClick={[Function]}
              >
                <Typography
                  bold={true}
                  textTransform="uppercase"
                  variant="standard"
                >
                  <WithStyles(TypographyComp)
                    bold={true}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    textTransform="uppercase"
                    theme={Object {}}
                    variant="standard"
                  >
                    <TypographyComp
                      bold={true}
                      classes={
                        Object {
                          "big": "TypographyComp-big-0-3-7",
                          "bold": "TypographyComp-bold-0-3-1",
                          "capitalize": "TypographyComp-capitalize-0-3-12",
                          "distance": "TypographyComp-distance-0-3-6",
                          "ellipsis": "TypographyComp-ellipsis-0-3-14",
                          "giant": "TypographyComp-giant-0-3-9",
                          "heading": "TypographyComp-heading-0-3-8",
                          "italic": "TypographyComp-italic-0-3-3",
                          "lowercase": "TypographyComp-lowercase-0-3-11",
                          "noWrap": "TypographyComp-noWrap-0-3-13",
                          "semiBold": "TypographyComp-semiBold-0-3-2",
                          "standard": "TypographyComp-standard-0-3-5",
                          "subtext": "TypographyComp-subtext-0-3-4",
                          "uppercase": "TypographyComp-uppercase-0-3-10",
                        }
                      }
                      textTransform="uppercase"
                      variant="standard"
                    >
                      <span
                        className="TypographyComp-standard-0-3-5 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                      >
                        Very long content
                      </span>
                    </TypographyComp>
                  </WithStyles(TypographyComp)>
                </Typography>
              </div>
            </TouchRippleComp>
          </WithStyles(TouchRippleComp)>
        </TouchRipple>
      </div>
    </ButtonStatusComp>
  </WithStyles(ButtonStatusComp)>
</ButtonStatus>
`;

exports[`Storyshots Components/ButtonStatus Selected icon 1`] = `
<ButtonStatus
  icon="person"
  onSelect={[Function]}
  selected={true}
  text="Platform 1"
>
  <WithStyles(ButtonStatusComp)
    icon="person"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onSelect={[Function]}
    selected={true}
    text="Platform 1"
    theme={Object {}}
  >
    <ButtonStatusComp
      classes={
        Object {
          "button": "ButtonStatusComp-button-0-3-63",
          "content": "ButtonStatusComp-content-0-3-60",
          "contentWithIcon": "ButtonStatusComp-contentWithIcon-0-3-61",
          "contour": "ButtonStatusComp-contour-0-3-59",
          "icon": "ButtonStatusComp-icon-0-3-62",
          "normal": "ButtonStatusComp-normal-0-3-57",
          "root": "ButtonStatusComp-root-0-3-56",
          "selected": "ButtonStatusComp-selected-0-3-58",
        }
      }
      icon="person"
      onSelect={[Function]}
      selected={true}
      text="Platform 1"
    >
      <div
        className="ButtonStatusComp-root-0-3-56"
      >
        <TouchRipple
          className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-selected-0-3-58"
          disabled={true}
        >
          <WithStyles(TouchRippleComp)
            className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-selected-0-3-58"
            disabled={true}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            theme={Object {}}
          >
            <TouchRippleComp
              className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-selected-0-3-58"
              classes={
                Object {
                  "disabled": "TouchRippleComp-disabled-0-3-34",
                  "root": "TouchRippleComp-root-0-3-33",
                }
              }
              disabled={true}
            >
              <div
                className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-selected-0-3-58 TouchRippleComp-disabled-0-3-34"
              >
                <Typography
                  bold={true}
                  textTransform="uppercase"
                  variant="standard"
                >
                  <WithStyles(TypographyComp)
                    bold={true}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    textTransform="uppercase"
                    theme={Object {}}
                    variant="standard"
                  >
                    <TypographyComp
                      bold={true}
                      classes={
                        Object {
                          "big": "TypographyComp-big-0-3-7",
                          "bold": "TypographyComp-bold-0-3-1",
                          "capitalize": "TypographyComp-capitalize-0-3-12",
                          "distance": "TypographyComp-distance-0-3-6",
                          "ellipsis": "TypographyComp-ellipsis-0-3-14",
                          "giant": "TypographyComp-giant-0-3-9",
                          "heading": "TypographyComp-heading-0-3-8",
                          "italic": "TypographyComp-italic-0-3-3",
                          "lowercase": "TypographyComp-lowercase-0-3-11",
                          "noWrap": "TypographyComp-noWrap-0-3-13",
                          "semiBold": "TypographyComp-semiBold-0-3-2",
                          "standard": "TypographyComp-standard-0-3-5",
                          "subtext": "TypographyComp-subtext-0-3-4",
                          "uppercase": "TypographyComp-uppercase-0-3-10",
                        }
                      }
                      textTransform="uppercase"
                      variant="standard"
                    >
                      <span
                        className="TypographyComp-standard-0-3-5 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                      >
                        Platform 1
                      </span>
                    </TypographyComp>
                  </WithStyles(TypographyComp)>
                </Typography>
                <div
                  className="ButtonStatusComp-icon-0-3-62"
                >
                  <MUIcon
                    color="#263238"
                    fontSize={40}
                    type="person"
                  >
                    <WithStyles(MUIconComp)
                      color="#263238"
                      fontSize={40}
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                      type="person"
                    >
                      <MUIconComp
                        classes={
                          Object {
                            "root": "MUIconComp-root-0-3-35 MUIconComp-root-d17-0-3-64",
                          }
                        }
                        color="#263238"
                        fontSize={40}
                        type="person"
                      >
                        <i
                          className="MUIconComp-root-0-3-35 MUIconComp-root-d17-0-3-64"
                        >
                          person
                        </i>
                      </MUIconComp>
                    </WithStyles(MUIconComp)>
                  </MUIcon>
                </div>
              </div>
            </TouchRippleComp>
          </WithStyles(TouchRippleComp)>
        </TouchRipple>
      </div>
    </ButtonStatusComp>
  </WithStyles(ButtonStatusComp)>
</ButtonStatus>
`;

exports[`Storyshots Components/ButtonStatus Selected no icon 1`] = `
<ButtonStatus
  onSelect={[Function]}
  selected={true}
  text="Platform 1"
>
  <WithStyles(ButtonStatusComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onSelect={[Function]}
    selected={true}
    text="Platform 1"
    theme={Object {}}
  >
    <ButtonStatusComp
      classes={
        Object {
          "button": "ButtonStatusComp-button-0-3-63",
          "content": "ButtonStatusComp-content-0-3-60",
          "contentWithIcon": "ButtonStatusComp-contentWithIcon-0-3-61",
          "contour": "ButtonStatusComp-contour-0-3-59",
          "icon": "ButtonStatusComp-icon-0-3-62",
          "normal": "ButtonStatusComp-normal-0-3-57",
          "root": "ButtonStatusComp-root-0-3-56",
          "selected": "ButtonStatusComp-selected-0-3-58",
        }
      }
      onSelect={[Function]}
      selected={true}
      text="Platform 1"
    >
      <div
        className="ButtonStatusComp-root-0-3-56"
      >
        <TouchRipple
          className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-selected-0-3-58"
          disabled={true}
        >
          <WithStyles(TouchRippleComp)
            className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-selected-0-3-58"
            disabled={true}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            theme={Object {}}
          >
            <TouchRippleComp
              className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-selected-0-3-58"
              classes={
                Object {
                  "disabled": "TouchRippleComp-disabled-0-3-34",
                  "root": "TouchRippleComp-root-0-3-33",
                }
              }
              disabled={true}
            >
              <div
                className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-selected-0-3-58 TouchRippleComp-disabled-0-3-34"
              >
                <Typography
                  bold={true}
                  textTransform="uppercase"
                  variant="standard"
                >
                  <WithStyles(TypographyComp)
                    bold={true}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    textTransform="uppercase"
                    theme={Object {}}
                    variant="standard"
                  >
                    <TypographyComp
                      bold={true}
                      classes={
                        Object {
                          "big": "TypographyComp-big-0-3-7",
                          "bold": "TypographyComp-bold-0-3-1",
                          "capitalize": "TypographyComp-capitalize-0-3-12",
                          "distance": "TypographyComp-distance-0-3-6",
                          "ellipsis": "TypographyComp-ellipsis-0-3-14",
                          "giant": "TypographyComp-giant-0-3-9",
                          "heading": "TypographyComp-heading-0-3-8",
                          "italic": "TypographyComp-italic-0-3-3",
                          "lowercase": "TypographyComp-lowercase-0-3-11",
                          "noWrap": "TypographyComp-noWrap-0-3-13",
                          "semiBold": "TypographyComp-semiBold-0-3-2",
                          "standard": "TypographyComp-standard-0-3-5",
                          "subtext": "TypographyComp-subtext-0-3-4",
                          "uppercase": "TypographyComp-uppercase-0-3-10",
                        }
                      }
                      textTransform="uppercase"
                      variant="standard"
                    >
                      <span
                        className="TypographyComp-standard-0-3-5 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                      >
                        Platform 1
                      </span>
                    </TypographyComp>
                  </WithStyles(TypographyComp)>
                </Typography>
              </div>
            </TouchRippleComp>
          </WithStyles(TouchRippleComp)>
        </TouchRipple>
      </div>
    </ButtonStatusComp>
  </WithStyles(ButtonStatusComp)>
</ButtonStatus>
`;

exports[`Storyshots Components/ButtonStatus Text 1`] = `
<ButtonStatus
  onSelect={[Function]}
  selected={false}
  text="Platform 1"
>
  <WithStyles(ButtonStatusComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onSelect={[Function]}
    selected={false}
    text="Platform 1"
    theme={Object {}}
  >
    <ButtonStatusComp
      classes={
        Object {
          "button": "ButtonStatusComp-button-0-3-63",
          "content": "ButtonStatusComp-content-0-3-60",
          "contentWithIcon": "ButtonStatusComp-contentWithIcon-0-3-61",
          "contour": "ButtonStatusComp-contour-0-3-59",
          "icon": "ButtonStatusComp-icon-0-3-62",
          "normal": "ButtonStatusComp-normal-0-3-57",
          "root": "ButtonStatusComp-root-0-3-56",
          "selected": "ButtonStatusComp-selected-0-3-58",
        }
      }
      onSelect={[Function]}
      selected={false}
      text="Platform 1"
    >
      <div
        className="ButtonStatusComp-root-0-3-56"
      >
        <TouchRipple
          className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
          disabled={false}
          onClick={[Function]}
        >
          <WithStyles(TouchRippleComp)
            className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
            disabled={false}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            onClick={[Function]}
            theme={Object {}}
          >
            <TouchRippleComp
              className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
              classes={
                Object {
                  "disabled": "TouchRippleComp-disabled-0-3-34",
                  "root": "TouchRippleComp-root-0-3-33",
                }
              }
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57 TouchRippleComp-root-0-3-33"
                onClick={[Function]}
              >
                <Typography
                  bold={true}
                  textTransform="uppercase"
                  variant="standard"
                >
                  <WithStyles(TypographyComp)
                    bold={true}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    textTransform="uppercase"
                    theme={Object {}}
                    variant="standard"
                  >
                    <TypographyComp
                      bold={true}
                      classes={
                        Object {
                          "big": "TypographyComp-big-0-3-7",
                          "bold": "TypographyComp-bold-0-3-1",
                          "capitalize": "TypographyComp-capitalize-0-3-12",
                          "distance": "TypographyComp-distance-0-3-6",
                          "ellipsis": "TypographyComp-ellipsis-0-3-14",
                          "giant": "TypographyComp-giant-0-3-9",
                          "heading": "TypographyComp-heading-0-3-8",
                          "italic": "TypographyComp-italic-0-3-3",
                          "lowercase": "TypographyComp-lowercase-0-3-11",
                          "noWrap": "TypographyComp-noWrap-0-3-13",
                          "semiBold": "TypographyComp-semiBold-0-3-2",
                          "standard": "TypographyComp-standard-0-3-5",
                          "subtext": "TypographyComp-subtext-0-3-4",
                          "uppercase": "TypographyComp-uppercase-0-3-10",
                        }
                      }
                      textTransform="uppercase"
                      variant="standard"
                    >
                      <span
                        className="TypographyComp-standard-0-3-5 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                      >
                        Platform 1
                      </span>
                    </TypographyComp>
                  </WithStyles(TypographyComp)>
                </Typography>
              </div>
            </TouchRippleComp>
          </WithStyles(TouchRippleComp)>
        </TouchRipple>
      </div>
    </ButtonStatusComp>
  </WithStyles(ButtonStatusComp)>
</ButtonStatus>
`;

exports[`Storyshots Components/ButtonStatus Unselected icon 1`] = `
<ButtonStatus
  icon="person"
  onSelect={[Function]}
  selected={false}
  text="Platform 1"
>
  <WithStyles(ButtonStatusComp)
    icon="person"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onSelect={[Function]}
    selected={false}
    text="Platform 1"
    theme={Object {}}
  >
    <ButtonStatusComp
      classes={
        Object {
          "button": "ButtonStatusComp-button-0-3-63",
          "content": "ButtonStatusComp-content-0-3-60",
          "contentWithIcon": "ButtonStatusComp-contentWithIcon-0-3-61",
          "contour": "ButtonStatusComp-contour-0-3-59",
          "icon": "ButtonStatusComp-icon-0-3-62",
          "normal": "ButtonStatusComp-normal-0-3-57",
          "root": "ButtonStatusComp-root-0-3-56",
          "selected": "ButtonStatusComp-selected-0-3-58",
        }
      }
      icon="person"
      onSelect={[Function]}
      selected={false}
      text="Platform 1"
    >
      <div
        className="ButtonStatusComp-root-0-3-56"
      >
        <TouchRipple
          className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-normal-0-3-57"
          disabled={false}
          onClick={[Function]}
        >
          <WithStyles(TouchRippleComp)
            className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-normal-0-3-57"
            disabled={false}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            onClick={[Function]}
            theme={Object {}}
          >
            <TouchRippleComp
              className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-normal-0-3-57"
              classes={
                Object {
                  "disabled": "TouchRippleComp-disabled-0-3-34",
                  "root": "TouchRippleComp-root-0-3-33",
                }
              }
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-contentWithIcon-0-3-61 ButtonStatusComp-normal-0-3-57 TouchRippleComp-root-0-3-33"
                onClick={[Function]}
              >
                <Typography
                  bold={true}
                  textTransform="uppercase"
                  variant="standard"
                >
                  <WithStyles(TypographyComp)
                    bold={true}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    textTransform="uppercase"
                    theme={Object {}}
                    variant="standard"
                  >
                    <TypographyComp
                      bold={true}
                      classes={
                        Object {
                          "big": "TypographyComp-big-0-3-7",
                          "bold": "TypographyComp-bold-0-3-1",
                          "capitalize": "TypographyComp-capitalize-0-3-12",
                          "distance": "TypographyComp-distance-0-3-6",
                          "ellipsis": "TypographyComp-ellipsis-0-3-14",
                          "giant": "TypographyComp-giant-0-3-9",
                          "heading": "TypographyComp-heading-0-3-8",
                          "italic": "TypographyComp-italic-0-3-3",
                          "lowercase": "TypographyComp-lowercase-0-3-11",
                          "noWrap": "TypographyComp-noWrap-0-3-13",
                          "semiBold": "TypographyComp-semiBold-0-3-2",
                          "standard": "TypographyComp-standard-0-3-5",
                          "subtext": "TypographyComp-subtext-0-3-4",
                          "uppercase": "TypographyComp-uppercase-0-3-10",
                        }
                      }
                      textTransform="uppercase"
                      variant="standard"
                    >
                      <span
                        className="TypographyComp-standard-0-3-5 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                      >
                        Platform 1
                      </span>
                    </TypographyComp>
                  </WithStyles(TypographyComp)>
                </Typography>
                <div
                  className="ButtonStatusComp-icon-0-3-62"
                >
                  <MUIcon
                    color="#ffffff"
                    fontSize={40}
                    type="person"
                  >
                    <WithStyles(MUIconComp)
                      color="#ffffff"
                      fontSize={40}
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                      type="person"
                    >
                      <MUIconComp
                        classes={
                          Object {
                            "root": "MUIconComp-root-0-3-35 MUIconComp-root-d18-0-3-65",
                          }
                        }
                        color="#ffffff"
                        fontSize={40}
                        type="person"
                      >
                        <i
                          className="MUIconComp-root-0-3-35 MUIconComp-root-d18-0-3-65"
                        >
                          person
                        </i>
                      </MUIconComp>
                    </WithStyles(MUIconComp)>
                  </MUIcon>
                </div>
              </div>
            </TouchRippleComp>
          </WithStyles(TouchRippleComp)>
        </TouchRipple>
      </div>
    </ButtonStatusComp>
  </WithStyles(ButtonStatusComp)>
</ButtonStatus>
`;

exports[`Storyshots Components/ButtonStatus Unselected no icon 1`] = `
<ButtonStatus
  onSelect={[Function]}
  selected={false}
  text="Platform 1"
>
  <WithStyles(ButtonStatusComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onSelect={[Function]}
    selected={false}
    text="Platform 1"
    theme={Object {}}
  >
    <ButtonStatusComp
      classes={
        Object {
          "button": "ButtonStatusComp-button-0-3-63",
          "content": "ButtonStatusComp-content-0-3-60",
          "contentWithIcon": "ButtonStatusComp-contentWithIcon-0-3-61",
          "contour": "ButtonStatusComp-contour-0-3-59",
          "icon": "ButtonStatusComp-icon-0-3-62",
          "normal": "ButtonStatusComp-normal-0-3-57",
          "root": "ButtonStatusComp-root-0-3-56",
          "selected": "ButtonStatusComp-selected-0-3-58",
        }
      }
      onSelect={[Function]}
      selected={false}
      text="Platform 1"
    >
      <div
        className="ButtonStatusComp-root-0-3-56"
      >
        <TouchRipple
          className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
          disabled={false}
          onClick={[Function]}
        >
          <WithStyles(TouchRippleComp)
            className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
            disabled={false}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            onClick={[Function]}
            theme={Object {}}
          >
            <TouchRippleComp
              className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57"
              classes={
                Object {
                  "disabled": "TouchRippleComp-disabled-0-3-34",
                  "root": "TouchRippleComp-root-0-3-33",
                }
              }
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="ButtonStatusComp-button-0-3-63 ButtonStatusComp-contour-0-3-59 ButtonStatusComp-content-0-3-60 ButtonStatusComp-normal-0-3-57 TouchRippleComp-root-0-3-33"
                onClick={[Function]}
              >
                <Typography
                  bold={true}
                  textTransform="uppercase"
                  variant="standard"
                >
                  <WithStyles(TypographyComp)
                    bold={true}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    textTransform="uppercase"
                    theme={Object {}}
                    variant="standard"
                  >
                    <TypographyComp
                      bold={true}
                      classes={
                        Object {
                          "big": "TypographyComp-big-0-3-7",
                          "bold": "TypographyComp-bold-0-3-1",
                          "capitalize": "TypographyComp-capitalize-0-3-12",
                          "distance": "TypographyComp-distance-0-3-6",
                          "ellipsis": "TypographyComp-ellipsis-0-3-14",
                          "giant": "TypographyComp-giant-0-3-9",
                          "heading": "TypographyComp-heading-0-3-8",
                          "italic": "TypographyComp-italic-0-3-3",
                          "lowercase": "TypographyComp-lowercase-0-3-11",
                          "noWrap": "TypographyComp-noWrap-0-3-13",
                          "semiBold": "TypographyComp-semiBold-0-3-2",
                          "standard": "TypographyComp-standard-0-3-5",
                          "subtext": "TypographyComp-subtext-0-3-4",
                          "uppercase": "TypographyComp-uppercase-0-3-10",
                        }
                      }
                      textTransform="uppercase"
                      variant="standard"
                    >
                      <span
                        className="TypographyComp-standard-0-3-5 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                      >
                        Platform 1
                      </span>
                    </TypographyComp>
                  </WithStyles(TypographyComp)>
                </Typography>
              </div>
            </TouchRippleComp>
          </WithStyles(TouchRippleComp)>
        </TouchRipple>
      </div>
    </ButtonStatusComp>
  </WithStyles(ButtonStatusComp)>
</ButtonStatus>
`;
